--- a/styles.css
+++ b/styles.css
@@ -549,3 +549,29 @@ footer {
 #form-commento .btn:hover {
     background-color: #FF4500;
 }
+
+.galleria a {
+    display: block;
+    overflow: hidden;
+    position: relative;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    background-color: #fff;
+    width: 200px; /* Larghezza fissa per tutti i riquadri */
+    height: 200px; /* Altezza fissa per tutti i riquadri */
+}
+
+.galleria img,
+.galleria video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Mantiene le proporzioni e copre l'area */
+    display: block;
+}
+
+/* Ruota le foto06 e foto08 in verticale */
+.galleria a[href*="Foto/foto06.jpg"] img,
+.galleria a[href*="Foto/foto08.jpg"] img {
+    transform: rotate(90deg);
+}
