--- a/styles.css
+++ b/styles.css
@@ -583,8 +583,8 @@ footer {
 
 /* Sezione commenti pre-impostati */
 .commenti-preimpostati {
-    background-color: rgba(51, 51, 51, 0.8);
-    color: #f1f1f1; /* Cambiato il colore del testo a una nuance più chiara */
+    background-color: rgba(40, 40, 40, 0.9); /* Sfondo più scuro */
+    color: #f1f1f1; 
     padding: 40px 0;
     margin-top: 2rem;
     border-radius: 8px;
@@ -601,7 +601,7 @@ footer {
 .commento-preimpostato {
     display: flex;
     margin-bottom: 20px;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.1); /* Sfondo per il singolo commento più chiaro */
     border-radius: 8px;
     padding: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -633,7 +633,7 @@ footer {
 
 .commento-contenuto p {
     margin: 0 0 10px;
-    color: #f1f1f1; /* Cambiato il colore del testo a una nuance più chiara */
+    color: #f1f1f1;
 }
 
 .data {
